refactor: colocando os arquivos em pastas

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
     <title>Meus produtos</title>
 </head>
 
@@ -24,7 +24,7 @@
             <ul class="produtos__lista">
                 <li class="produtos__item">
                     <div class="produtos__content">
-                        <img src="assets/celular.jpeg" alt="Imagem de celular">
+                        <img src="assets/images/celular.jpeg" alt="Imagem de celular">
                         <div class="produtos__informacoes">
                             <h3>Celular</h3>
                             <p>Descubra a mais recente tecnologia em comunicação com nossos celulares de última geração.
@@ -37,7 +37,7 @@
 
                 <li class="produtos__item">
                     <div class="produtos__content">
-                        <img src="assets/ps7.jpeg" alt="Imagem de celular">
+                        <img src="assets/images/ps7.jpeg" alt="Imagem de celular">
                         <div class="produtos__informacoes">
                             <h3>Video Game</h3>
                             <p>Mergulhe no mundo dos jogos com nosso console de última geração
@@ -49,7 +49,7 @@
                 </li>
                 <li class="produtos__item">
                     <div class="produtos__content">
-                        <img src="assets/tenis.jpeg" alt="Imagem de celular">
+                        <img src="assets/images/tenis.jpeg" alt="Imagem de celular">
                         <div class="produtos__informacoes">
                             <h3>Tenis</h3>
                             <p>Escolha entre uma variedade de modelos para se destacar com elegância em qualquer ocasião
@@ -61,7 +61,7 @@
                 </li>
                 <li class="produtos__item">
                     <div class="produtos__content">
-                        <img src="assets/t-shirt.jpeg" alt="Imagem de celular">
+                        <img src="assets/images/t-shirt.jpeg" alt="Imagem de celular">
                         <div class="produtos__informacoes">
                             <h3>Camiseta</h3>
                             <p>Mostre seu amor pelos felinos com nossa camiseta de gato
@@ -73,7 +73,7 @@
                 </li>
                 <li class="produtos__item">
                     <div class="produtos__content">
-                        <img src="assets/tshirt-2.jpeg" alt="Imagem de celular">
+                        <img src="assets/images/tshirt-2.jpeg" alt="Imagem de celular">
                         <div class="produtos__informacoes">
                             <h3>Camiseta</h3>
                             <p>Apresenta um novo design para expressar seu carinho pelos felinos
@@ -85,7 +85,7 @@
                 </li>
                 <li class="produtos__item">
                     <div class="produtos__content">
-                        <img src="assets/notebook.jpeg" alt="Imagem de celular">
+                        <img src="assets/images/notebook.jpeg" alt="Imagem de celular">
                         <div class="produtos__informacoes">
                             <h3>Notebook</h3>
                             <p>Eleve sua produtividade com nossos notebooks de alto desempenho
@@ -97,7 +97,7 @@
                 </li>
                 <li class="produtos__item">
                     <div class="produtos__content">
-                        <img src="assets/livro.jpeg" alt="Imagem de celular">
+                        <img src="assets/images/livro.jpeg" alt="Imagem de celular">
                         <div class="produtos__informacoes">
                             <h3>Livro de HTML e CSS</h3>
                             <p>Aprenda como criar páginas incríveis com HTML e CSS
@@ -109,7 +109,7 @@
                 </li>
                 <li class="produtos__item">
                     <div class="produtos__content">
-                        <img src="assets/vale-presente.jpeg" alt="Imagem de celular">
+                        <img src="assets/images/vale-presente.jpeg" alt="Imagem de celular">
                         <div class="produtos__informacoes">
                             <h3>Vale Presente</h3>
                             <p>Que tal presentear quem você mais ama?
